src/main/java/lois/lab1/parser/output/logicLanguageParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g 2012-10-04 07:37:59

    package lois.lab1.parser.output;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class logicLanguageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LOWER_SYMBOL", "UPPER_SYMBOL", "COMMENT", "WS", "'.'", "'('", "','", "')'", "'<-'", "';'", "'?'"
    };
    public static final int WS=7;
    public static final int T__12=12;
    public static final int UPPER_SYMBOL=5;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int LOWER_SYMBOL=4;
    public static final int COMMENT=6;
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__8=8;

    // delegates
    // delegators


        public logicLanguageParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public logicLanguageParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return logicLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g"; }


    public static class base_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "base"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:17:1: base : factList ( ruleList )? ;
    public final logicLanguageParser.base_return base() throws RecognitionException {
        logicLanguageParser.base_return retval = new logicLanguageParser.base_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        logicLanguageParser.factList_return factList1 = null;

        logicLanguageParser.ruleList_return ruleList2 = null;



        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:18:2: ( factList ( ruleList )? )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:18:4: factList ( ruleList )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_factList_in_base50);
            factList1=factList();

            state._fsp--;

            adaptor.addChild(root_0, factList1.getTree());
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:18:13: ( ruleList )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==UPPER_SYMBOL) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:18:13: ruleList
                    {
                    pushFollow(FOLLOW_ruleList_in_base52);
                    ruleList2=ruleList();

                    state._fsp--;

                    adaptor.addChild(root_0, ruleList2.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "base"

    public static class factList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "factList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:21:1: factList : fact ( fact )* ;
    public final logicLanguageParser.factList_return factList() throws RecognitionException {
        logicLanguageParser.factList_return retval = new logicLanguageParser.factList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        logicLanguageParser.fact_return fact3 = null;

        logicLanguageParser.fact_return fact4 = null;



        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:22:2: ( fact ( fact )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:22:4: fact ( fact )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_fact_in_factList65);
            fact3=fact();

            state._fsp--;

            adaptor.addChild(root_0, fact3.getTree());
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:22:9: ( fact )*
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:22:9: fact
            	    {
            	    pushFollow(FOLLOW_fact_in_factList67);
            	    fact4=fact();

            	    state._fsp--;

            	    adaptor.addChild(root_0, fact4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "factList"

    public static class ruleList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ruleList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:25:1: ruleList : rule ( rule )* ;
    public final logicLanguageParser.ruleList_return ruleList() throws RecognitionException {
        logicLanguageParser.ruleList_return retval = new logicLanguageParser.ruleList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        logicLanguageParser.rule_return rule5 = null;

        logicLanguageParser.rule_return rule6 = null;



        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:26:2: ( rule ( rule )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:26:4: rule ( rule )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_rule_in_ruleList80);
            rule5=rule();

            state._fsp--;

            adaptor.addChild(root_0, rule5.getTree());
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:26:9: ( rule )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==UPPER_SYMBOL) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:26:9: rule
            	    {
            	    pushFollow(FOLLOW_rule_in_ruleList82);
            	    rule6=rule();

            	    state._fsp--;

            	    adaptor.addChild(root_0, rule6.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ruleList"

    public static class fact_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "fact"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:29:1: fact : ( predicateFact | similarityRelation );
    public final logicLanguageParser.fact_return fact() throws RecognitionException {
        logicLanguageParser.fact_return retval = new logicLanguageParser.fact_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        logicLanguageParser.predicateFact_return predicateFact7 = null;

        logicLanguageParser.similarityRelation_return similarityRelation8 = null;



        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:30:2: ( predicateFact | similarityRelation )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==UPPER_SYMBOL) ) {
                alt4=1;
            }
            else if ( (LA4_0==LOWER_SYMBOL) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:30:4: predicateFact
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_predicateFact_in_fact95);
                    predicateFact7=predicateFact();

                    state._fsp--;

                    adaptor.addChild(root_0, predicateFact7.getTree());

                    }
                    break;
                case 2 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:30:20: similarityRelation
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_similarityRelation_in_fact99);
                    similarityRelation8=similarityRelation();

                    state._fsp--;

                    adaptor.addChild(root_0, similarityRelation8.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "fact"

    public static class similarityRelation_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "similarityRelation"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:33:1: similarityRelation : similarityName similarityNamePair '.' ;
    public final logicLanguageParser.similarityRelation_return similarityRelation() throws RecognitionException {
        logicLanguageParser.similarityRelation_return retval = new logicLanguageParser.similarityRelation_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal11=null;
        logicLanguageParser.similarityName_return similarityName9 = null;

        logicLanguageParser.similarityNamePair_return similarityNamePair10 = null;


        Object char_literal11_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:34:2: ( similarityName similarityNamePair '.' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:34:4: similarityName similarityNamePair '.'
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_similarityName_in_similarityRelation111);
            similarityName9=similarityName();

            state._fsp--;

            adaptor.addChild(root_0, similarityName9.getTree());
            pushFollow(FOLLOW_similarityNamePair_in_similarityRelation113);
            similarityNamePair10=similarityNamePair();

            state._fsp--;

            adaptor.addChild(root_0, similarityNamePair10.getTree());
            char_literal11=(Token)match(input,8,FOLLOW_8_in_similarityRelation115); 
            char_literal11_tree = (Object)adaptor.create(char_literal11);
            adaptor.addChild(root_0, char_literal11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "similarityRelation"

    public static class similarityNamePair_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "similarityNamePair"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:37:1: similarityNamePair : ( predicateNamePair | constNamePair );
    public final logicLanguageParser.similarityNamePair_return similarityNamePair() throws RecognitionException {
        logicLanguageParser.similarityNamePair_return retval = new logicLanguageParser.similarityNamePair_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        logicLanguageParser.predicateNamePair_return predicateNamePair12 = null;

        logicLanguageParser.constNamePair_return constNamePair13 = null;



        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:38:2: ( predicateNamePair | constNamePair )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==9) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==LOWER_SYMBOL) ) {
                    alt5=2;
                }
                else if ( (LA5_1==UPPER_SYMBOL) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:38:4: predicateNamePair
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_predicateNamePair_in_similarityNamePair127);
                    predicateNamePair12=predicateNamePair();

                    state._fsp--;

                    adaptor.addChild(root_0, predicateNamePair12.getTree());

                    }
                    break;
                case 2 :
                    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:38:24: constNamePair
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_constNamePair_in_similarityNamePair131);
                    constNamePair13=constNamePair();

                    state._fsp--;

                    adaptor.addChild(root_0, constNamePair13.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "similarityNamePair"

    public static class predicateNamePair_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "predicateNamePair"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:41:1: predicateNamePair : '(' predicateName ',' predicateName ')' ;
    public final logicLanguageParser.predicateNamePair_return predicateNamePair() throws RecognitionException {
        logicLanguageParser.predicateNamePair_return retval = new logicLanguageParser.predicateNamePair_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        logicLanguageParser.predicateName_return predicateName15 = null;

        logicLanguageParser.predicateName_return predicateName17 = null;


        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:42:2: ( '(' predicateName ',' predicateName ')' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:42:4: '(' predicateName ',' predicateName ')'
            {
            root_0 = (Object)adaptor.nil();

            char_literal14=(Token)match(input,9,FOLLOW_9_in_predicateNamePair143); 
            char_literal14_tree = (Object)adaptor.create(char_literal14);
            adaptor.addChild(root_0, char_literal14_tree);

            pushFollow(FOLLOW_predicateName_in_predicateNamePair145);
            predicateName15=predicateName();

            state._fsp--;

            adaptor.addChild(root_0, predicateName15.getTree());
            char_literal16=(Token)match(input,10,FOLLOW_10_in_predicateNamePair147); 
            char_literal16_tree = (Object)adaptor.create(char_literal16);
            adaptor.addChild(root_0, char_literal16_tree);

            pushFollow(FOLLOW_predicateName_in_predicateNamePair149);
            predicateName17=predicateName();

            state._fsp--;

            adaptor.addChild(root_0, predicateName17.getTree());
            char_literal18=(Token)match(input,11,FOLLOW_11_in_predicateNamePair151); 
            char_literal18_tree = (Object)adaptor.create(char_literal18);
            adaptor.addChild(root_0, char_literal18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "predicateNamePair"

    public static class constNamePair_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "constNamePair"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:45:1: constNamePair : '(' constant ',' constant ')' ;
    public final logicLanguageParser.constNamePair_return constNamePair() throws RecognitionException {
        logicLanguageParser.constNamePair_return retval = new logicLanguageParser.constNamePair_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal19=null;
        Token char_literal21=null;
        Token char_literal23=null;
        logicLanguageParser.constant_return constant20 = null;

        logicLanguageParser.constant_return constant22 = null;


        Object char_literal19_tree=null;
        Object char_literal21_tree=null;
        Object char_literal23_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:46:2: ( '(' constant ',' constant ')' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:46:4: '(' constant ',' constant ')'
            {
            root_0 = (Object)adaptor.nil();

            char_literal19=(Token)match(input,9,FOLLOW_9_in_constNamePair163); 
            char_literal19_tree = (Object)adaptor.create(char_literal19);
            adaptor.addChild(root_0, char_literal19_tree);

            pushFollow(FOLLOW_constant_in_constNamePair165);
            constant20=constant();

            state._fsp--;

            adaptor.addChild(root_0, constant20.getTree());
            char_literal21=(Token)match(input,10,FOLLOW_10_in_constNamePair167); 
            char_literal21_tree = (Object)adaptor.create(char_literal21);
            adaptor.addChild(root_0, char_literal21_tree);

            pushFollow(FOLLOW_constant_in_constNamePair169);
            constant22=constant();

            state._fsp--;

            adaptor.addChild(root_0, constant22.getTree());
            char_literal23=(Token)match(input,11,FOLLOW_11_in_constNamePair171); 
            char_literal23_tree = (Object)adaptor.create(char_literal23);
            adaptor.addChild(root_0, char_literal23_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "constNamePair"

    public static class predicateFact_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "predicateFact"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:50:1: predicateFact : predicateName '(' constList ')' '.' ;
    public final logicLanguageParser.predicateFact_return predicateFact() throws RecognitionException {
        logicLanguageParser.predicateFact_return retval = new logicLanguageParser.predicateFact_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal25=null;
        Token char_literal27=null;
        Token char_literal28=null;
        logicLanguageParser.predicateName_return predicateName24 = null;

        logicLanguageParser.constList_return constList26 = null;


        Object char_literal25_tree=null;
        Object char_literal27_tree=null;
        Object char_literal28_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:51:2: ( predicateName '(' constList ')' '.' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:51:4: predicateName '(' constList ')' '.'
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_predicateName_in_predicateFact186);
            predicateName24=predicateName();

            state._fsp--;

            adaptor.addChild(root_0, predicateName24.getTree());
            char_literal25=(Token)match(input,9,FOLLOW_9_in_predicateFact188); 
            char_literal25_tree = (Object)adaptor.create(char_literal25);
            adaptor.addChild(root_0, char_literal25_tree);

            pushFollow(FOLLOW_constList_in_predicateFact190);
            constList26=constList();

            state._fsp--;

            adaptor.addChild(root_0, constList26.getTree());
            char_literal27=(Token)match(input,11,FOLLOW_11_in_predicateFact192); 
            char_literal27_tree = (Object)adaptor.create(char_literal27);
            adaptor.addChild(root_0, char_literal27_tree);

            char_literal28=(Token)match(input,8,FOLLOW_8_in_predicateFact194); 
            char_literal28_tree = (Object)adaptor.create(char_literal28);
            adaptor.addChild(root_0, char_literal28_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "predicateFact"

    public static class constList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "constList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:54:1: constList : constant ( ',' constant )* ;
    public final logicLanguageParser.constList_return constList() throws RecognitionException {
        logicLanguageParser.constList_return retval = new logicLanguageParser.constList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal30=null;
        logicLanguageParser.constant_return constant29 = null;

        logicLanguageParser.constant_return constant31 = null;


        Object char_literal30_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:55:2: ( constant ( ',' constant )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:55:4: constant ( ',' constant )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_constant_in_constList206);
            constant29=constant();

            state._fsp--;

            adaptor.addChild(root_0, constant29.getTree());
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:55:13: ( ',' constant )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==10) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:55:14: ',' constant
            	    {
            	    char_literal30=(Token)match(input,10,FOLLOW_10_in_constList209); 
            	    char_literal30_tree = (Object)adaptor.create(char_literal30);
            	    adaptor.addChild(root_0, char_literal30_tree);

            	    pushFollow(FOLLOW_constant_in_constList211);
            	    constant31=constant();

            	    state._fsp--;

            	    adaptor.addChild(root_0, constant31.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "constList"

    public static class rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rule"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:58:1: rule : predicateTerm '<-' predicateTermList '.' ;
    public final logicLanguageParser.rule_return rule() throws RecognitionException {
        logicLanguageParser.rule_return retval = new logicLanguageParser.rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal33=null;
        Token char_literal35=null;
        logicLanguageParser.predicateTerm_return predicateTerm32 = null;

        logicLanguageParser.predicateTermList_return predicateTermList34 = null;


        Object string_literal33_tree=null;
        Object char_literal35_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:59:2: ( predicateTerm '<-' predicateTermList '.' )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:59:4: predicateTerm '<-' predicateTermList '.'
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_predicateTerm_in_rule224);
            predicateTerm32=predicateTerm();

            state._fsp--;

            adaptor.addChild(root_0, predicateTerm32.getTree());
            string_literal33=(Token)match(input,12,FOLLOW_12_in_rule226); 
            string_literal33_tree = (Object)adaptor.create(string_literal33);
            adaptor.addChild(root_0, string_literal33_tree);

            pushFollow(FOLLOW_predicateTermList_in_rule228);
            predicateTermList34=predicateTermList();

            state._fsp--;

            adaptor.addChild(root_0, predicateTermList34.getTree());
            char_literal35=(Token)match(input,8,FOLLOW_8_in_rule230); 
            char_literal35_tree = (Object)adaptor.create(char_literal35);
            adaptor.addChild(root_0, char_literal35_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rule"

    public static class predicateTermList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "predicateTermList"
    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:62:1: predicateTermList : predicateTerm ( ';' predicateTerm )* ;
    public final logicLanguageParser.predicateTermList_return predicateTermList() throws RecognitionException {
        logicLanguageParser.predicateTermList_return retval = new logicLanguageParser.predicateTermList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal37=null;
        logicLanguageParser.predicateTerm_return predicateTerm36 = null;

        logicLanguageParser.predicateTerm_return predicateTerm38 = null;


        Object char_literal37_tree=null;

        try {
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:63:2: ( predicateTerm ( ';' predicateTerm )* )
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:63:4: predicateTerm ( ';' predicateTerm )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_predicateTerm_in_predicateTermList242);
            predicateTerm36=predicateTerm();

            state._fsp--;

            adaptor.addChild(root_0, predicateTerm36.getTree());
            // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:63:18: ( ';' predicateTerm )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==13) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\MyDocuments\\GitRepo\\Lois1\\src\\main\\java\\lois\\lab1\\parser\\logicLanguage.g:63:19: ';' predicateTerm
            	    {
            	    char_literal37=(Token)match(input,13,FOLLOW_13_in_predicateTermList245); 
            	    char_literal37_tree = (Object)adaptor.create(char_literal37);
